--- a/ru.po
+++ b/ru.po
@@ -7,7 +7,7 @@ msgstr ""
 "Project-Id-Version: ALT Mirror Switcher\n"
 "Report-Msgid-Bugs-To: https://altlinux.space/aleksandershad/alt-mirror-switcher/issuesPOT-Creation-Date: 2025-11-17 13:00+1100\n"
 "POT-Creation-Date: \n"
-"PO-Revision-Date: 2025-11-18 09:37+1100\n"
+"PO-Revision-Date: 2025-12-09 16:14+1100\n"
 "Last-Translator: Aleksandr Shamaraev <shad@altlinux.org>\n"
 "Language-Team: \n"
 "Language: ru_RU\n"
@@ -76,3 +76,6 @@ msgstr "включено: "
 
 msgid "A difference in branches was detected. If you are using Sisyphus, <b>install apt-conf-sisyphus</b>."
 msgstr "Обнаружена разница в бранчах. Если Вы используете Сизиф, <b>установите apt-conf-sisyphus</b>."
+
+msgid "The active mirror restored!"
+msgstr "Активное зеркало восстановлено!"
