--- a/po/ru.po
+++ b/po/ru.po
@@ -5,10 +5,10 @@
 msgid ""
 msgstr ""
 "Project-Id-Version: ALT Mirror Switcher\n"
-"Report-Msgid-Bugs-To: https://altlinux.space/aleksandershad/alt-mirror-switcher/issuesPOT-Creation-Date: "
-"2025-11-17 13:00+1100\n"
+"Report-Msgid-Bugs-To: https://altlinux.space/aleksandershad/alt-mirror-switcher/issues"
+"POT-Creation-Date: 2025-11-17 13:00+1100\n"
 "POT-Creation-Date: \n"
-"PO-Revision-Date: 2025-12-22 14:02+1100\n"
+"PO-Revision-Date: 2025-12-29 14:16+1100\n"
 "Last-Translator: Aleksandr Shamaraev <shad@altlinux.org>\n"
 "Language-Team: \n"
 "Language: ru_RU\n"
@@ -83,3 +83,6 @@ msgstr "Активное зеркало восстановлено!"
 
 msgid "A branch difference was detected. You are using additional mirrors from a different branch."
 msgstr "Обнаружено различие в ветках. Вы используете дополнительные зеркала из другой ветки."
+
+msgid "convert http -> https if https not found"
+msgstr "конвертировать http -> https если https не найден"
